[gd_scene load_steps=18 format=4 uid="uid://dtr3o2losg0oh"]

[ext_resource type="Script" uid="uid://i361dt71k53j" path="res://Scripts/title.gd" id="1_pld1e"]
[ext_resource type="Texture2D" uid="uid://c1yvj7js5l1qo" path="res://Textures/Ice.png" id="2_7t0me"]
[ext_resource type="Texture2D" uid="uid://ccqucngkb4jpg" path="res://Textures/Rock.png" id="3_me1mv"]
[ext_resource type="Texture2D" uid="uid://1yfdlolc6n60" path="res://Textures/Water.png" id="4_epiv6"]
[ext_resource type="Texture2D" uid="uid://1sx6v3vy0sf5" path="res://Textures/SmoothIce.png" id="5_3do78"]
[ext_resource type="Texture2D" uid="uid://btijooval5mth" path="res://Textures/Rock3.png" id="6_obtlk"]
[ext_resource type="Texture2D" uid="uid://ce0an13n2kbhe" path="res://Textures/Rock2.png" id="7_wgu5v"]
[ext_resource type="Texture2D" uid="uid://bfd38thafjkyv" path="res://Textures/WaterAnimation.png" id="8_1pdhp"]
[ext_resource type="Theme" uid="uid://u0weufkmr08b" path="res://Themes/titlebuttons.tres" id="9_f3xlv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rbgi3"]
texture = ExtResource("2_7t0me")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g06w4"]
texture = ExtResource("3_me1mv")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ti4w6"]
texture = ExtResource("4_epiv6")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e8qc1"]
texture = ExtResource("5_3do78")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xyp27"]
texture = ExtResource("6_obtlk")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_73gom"]
texture = ExtResource("7_wgu5v")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gvmy1"]
texture = ExtResource("8_1pdhp")
texture_region_size = Vector2i(256, 256)
0:0/animation_columns = 2
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xyp27"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("TileSetAtlasSource_rbgi3")
sources/1 = SubResource("TileSetAtlasSource_g06w4")
sources/2 = SubResource("TileSetAtlasSource_ti4w6")
sources/3 = SubResource("TileSetAtlasSource_e8qc1")
sources/4 = SubResource("TileSetAtlasSource_xyp27")
sources/5 = SubResource("TileSetAtlasSource_73gom")
sources/6 = SubResource("TileSetAtlasSource_gvmy1")

[node name="Title" type="Node2D"]
script = ExtResource("1_pld1e")

[node name="Background" type="TileMapLayer" parent="."]
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAJAAIAAwAAAAAAAAAIAAIAAAAAAAAAAAAHAAIABgAAAAAAAAAGAAIAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAMAAAAAAAAAAAAJAAMAAwAAAAAAAAAHAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAADAAMAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAQAAwAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAQAAwAAAAAAAAAKAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUABgAAAAAAAAAEAAUAAAAAAAAAAAAFAAYABgAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUABQAAAAAAAAAJAAUABgAAAAAAAAAKAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAYABgAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAAAAAAAAAAAAAAYAAAAAAAAAAAAFAAIAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_xyp27")

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 48.0
offset_top = 27.0
offset_right = 815.0
offset_bottom = 240.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/normal_font_size = 150
text = "Thin Ice"

[node name="New Match" type="RichTextLabel" parent="."]
offset_left = 54.0
offset_top = 345.0
offset_right = 496.0
offset_bottom = 449.0
theme = ExtResource("9_f3xlv")
bbcode_enabled = true
text = "Local Match"

[node name="Settings" type="RichTextLabel" parent="."]
offset_left = 54.0
offset_top = 457.0
offset_right = 354.0
offset_bottom = 561.0
theme = ExtResource("9_f3xlv")
text = "Settings"

[node name="Exit" type="RichTextLabel" parent="."]
offset_left = 54.0
offset_top = 569.0
offset_right = 354.0
offset_bottom = 673.0
theme = ExtResource("9_f3xlv")
text = "Exit"

[node name="Online Match" type="RichTextLabel" parent="."]
offset_left = 54.0
offset_top = 233.0
offset_right = 540.0
offset_bottom = 337.0
theme = ExtResource("9_f3xlv")
text = "Online Match"

[node name="OnlinePopup" type="Popup" parent="."]
title = "Online Match"
initial_position = 2
size = Vector2i(400, 200)
borderless = false

[node name="IPText" type="Label" parent="OnlinePopup"]
offset_left = 78.0
offset_top = 24.0
offset_right = 118.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 30
text = "IP:"

[node name="IP" type="TextEdit" parent="OnlinePopup"]
offset_left = 141.0
offset_top = 26.0
offset_right = 305.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 20
text = "127.0.0.1"
placeholder_text = "127.0.0.1"
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false

[node name="Host" type="Button" parent="OnlinePopup"]
offset_left = 42.0
offset_top = 97.0
offset_right = 178.0
offset_bottom = 182.0
focus_mode = 0
text = "Host"

[node name="Join" type="Button" parent="OnlinePopup"]
offset_left = 224.0
offset_top = 97.0
offset_right = 360.0
offset_bottom = 182.0
focus_mode = 0
text = "Join"

[connection signal="gui_input" from="New Match" to="." method="_on_new_match_gui_input"]
[connection signal="gui_input" from="Settings" to="." method="_on_settings_gui_input"]
[connection signal="gui_input" from="Exit" to="." method="_on_exit_gui_input"]
[connection signal="gui_input" from="Online Match" to="." method="_on_online_match_gui_input"]
[connection signal="focus_exited" from="OnlinePopup" to="." method="_on_online_popup_focus_exited"]
[connection signal="pressed" from="OnlinePopup/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="OnlinePopup/Join" to="." method="_on_join_pressed"]
